# TheRighToRepair

./: README.md  quest
backup/public_html/: index.html
backup/public_html/Beck-end/Login-Sing_up/: index.html
backup/public_html/Beck-end/search.php/: index.html
projetinhofelas/Frontend/Inicialpage/: index.html
projetinhofelas/beckend/: Cargo.toml
